# Bookshelf

./: Books.db  README.md  database.py  datamodel.py  functions.py  gui.py  main.py  setup.cfg
UserStories/: US_01.md  US_02.md  US_03.md  US_04.md
bookshelf_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_functions.py
