[metadata]
name = bookshelf_project
author = Matthias Serschön
author_email = sersch190092@sr.htlweiz.at
description = Bookshelf for personal use
version = 1.0.0
url = https://github.com
keywords = logging
        pytest
        file
        parser
        output
        input
	restful
	rest
	fastapi

license_file =
        LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pydantic
	sqlalchemy
	union
	uvicorn
	websockets
	wheel
  autopep8
  doq
  fastapi
  flake8
  isort
  pytest
  rope


[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[tool:pytest]
testpaths = tests
log_level = info
